--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -313,7 +313,7 @@
   }
 
   &.about-projects-container--top {
-    margin-top: 110px;
+    margin-top: 100px;
   }
 }
 
